<resources>
    <string name="app_name">MovAffinity UAH</string>
    <string name="main_activity_name">MovAffinity UAH</string>
    <string name="peliculaCardTitleTextPlaceholder">Título de la Película</string>
    <string name="peliculaCardAnioTextPlaceholder">Año de la Película</string>
    <string name="peliculaCardDuracionTextPlaceholder">Duración de la Película</string>
    <string name="peliculaCardActorPrincipalTextPlaceholder">Actor Principal de la Película</string>
    <string name="peliculaCardSinopsisTextPlaceholder">Sinopsis de la Película</string>
    <string name="peliculaCardCoverImageTextPlaceholder">Imagen tipo Cover de la Película</string>
    <string name="peliculaCardMaterialButton1Text">Guardar Pelicula</string>
    <string name="peliculaCardMaterialButton2Text">Borrar Pelicula</string>
    <string name="menuInferiorNavegacionElemento1Text">Home</string>
    <string name="menuInferiorNavegacionElemento2Text">Buscar película</string>
    <string name="menuInferiorNavegacionElemento3Text">Salir</string>
    <string name="barraDeBusquedaHint">Busca la película que has visto...</string>
    <string name="barraBusquedaNestedScrollViewHint">Nested Scroll</string>
</resources>