<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/peliculaCardFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="10dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/peliculaCardCoverImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/peliculaCardCoverImageTextPlaceholder"
                android:textSize="18sp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/peliculaCardTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/peliculaCardTitleTextPlaceholder"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/peliculaCardAnioText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peliculaCardAnioTextPlaceholder"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/peliculaCardDuracionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peliculaCardDuracionTextPlaceholder"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/peliculaCardActorPrincipalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peliculaCardActorPrincipalTextPlaceholder"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/peliculaCardSinopsisText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peliculaCardSinopsisTextPlaceholder"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/botonAccion1" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonAccion2" />

        </FrameLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>